# nexus

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  MISSION.md  MONETIZATION.md  Makefile  PRODUCT_SPEC.md  README.md  docker-compose.prod.yml  docker-compose.yml
cli/: pyproject.toml
cli/nexus_cli/: __init__.py  client.py  config.py  main.py
core/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  alembic.ini  docker-compose.test.yml  pyproject.toml  pytest.ini
core/alembic/: env.py
core/alembic/versions/: 20260303_1200_001_add_graph_webhooks_analytics_tenants.py  20260303_1300_002_add_row_level_security.py  20260303_1400_003_add_ai_efficiency_modules.py  20260304_1000_004_add_admin_users.py  20260305_1000_005_add_users.py  20260305_1100_006_add_promotional_balance.py  20260306_1000_007_add_user_two_factor.py
core/nexus/: __init__.py  auth.py  config.py  database.py  mailer.py  main.py
core/nexus/admin/: __init__.py  auth.py  models.py  routes.py  schemas.py  service.py
core/nexus/analytics/: __init__.py  collector.py  models.py  routes.py  schemas.py  service.py  tasks.py
core/nexus/audit/: __init__.py  models.py  routes.py  service.py
core/nexus/billing/: __init__.py  marketplace_service.py  models.py  plans.py  routes.py  schemas.py  service.py  stripe_client.py
core/nexus/budgets/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/cache/: __init__.py  models.py  service.py
core/nexus/calendar/: __init__.py  models.py  routes.py  service.py
core/nexus/chat/: __init__.py  models.py  routes.py  service.py
core/nexus/cli/: __init__.py  main.py
core/nexus/connectors/: __init__.py  models.py  routes.py  service.py
core/nexus/context/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/conversations/: __init__.py  models.py  routes.py  service.py
core/nexus/credits/: __init__.py  models.py  routes.py  service.py
core/nexus/devices/: __init__.py  models.py  routes.py  service.py
core/nexus/discovery/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/documents/: __init__.py  models.py  routes.py  service.py
core/nexus/email/: __init__.py  models.py  routes.py  service.py
core/nexus/events/: __init__.py  models.py  routes.py  service.py
core/nexus/federation/: __init__.py  models.py  routes.py  service.py
core/nexus/gigs/: __init__.py  models.py  routes.py  service.py
core/nexus/goals/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/graph/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/health/: __init__.py  models.py  routes.py  service.py
core/nexus/identity/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/jobs/: __init__.py  models.py  scheduler.py  service.py  tasks.py  worker.py
core/nexus/learning/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/llm/: __init__.py  base.py  router.py  routes.py
core/nexus/marketplace/: __init__.py  models.py  routes.py  service.py
core/nexus/mcp/: __init__.py  server.py
core/nexus/media/: __init__.py  models.py  routes.py  service.py  storage.py
core/nexus/memory/: __init__.py  embeddings.py  models.py  routes.py  schemas.py  service.py
core/nexus/messaging/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/notifications/: __init__.py  models.py  routes.py  service.py
core/nexus/oauth/: __init__.py  models.py  routes.py  service.py
core/nexus/observability/: __init__.py  health.py  logging.py  metrics.py  middleware.py
core/nexus/onboarding/: __init__.py  routes.py  service.py
core/nexus/orchestration/: __init__.py  models.py  routes.py  service.py
core/nexus/phone/: __init__.py  models.py  routes.py  service.py
core/nexus/profiles/: __init__.py  models.py  routes.py  service.py
core/nexus/public/: __init__.py  models.py  routes.py  service.py
core/nexus/queues/: __init__.py  models.py  routes.py  service.py
core/nexus/ratelimit/: __init__.py  models.py  routes.py  service.py
core/nexus/reputation/: __init__.py  models.py  routes.py  schemas.py  service.py
core/nexus/scheduling/: __init__.py  models.py  routes.py  service.py
core/nexus/search/: __init__.py  models.py  routes.py  service.py
core/nexus/security/: __init__.py  encryption.py  ip_utils.py  secrets.py  tokens.py
core/nexus/sms/: __init__.py  models.py  routes.py  service.py
core/nexus/storage/: __init__.py  models.py  routes.py  service.py
core/nexus/streaming/: __init__.py  routes.py  service.py
core/nexus/swarm/: __init__.py  models.py  routes.py  schemas.py  service.py  websocket.py
core/nexus/teams/: __init__.py  models.py  routes.py  service.py
core/nexus/tenants/: __init__.py  limits.py  middleware.py  models.py  routes.py
core/nexus/tools/: __init__.py  models.py  routes.py  service.py
core/nexus/tracing/: __init__.py  models.py  routes.py  service.py
core/nexus/users/: __init__.py  models.py  routes.py  schemas.py  service.py  two_factor.py
core/nexus/video/: __init__.py  models.py  routes.py  service.py
core/scripts/: rotate_secrets.py  rotate_secrets_cron.sh  setup_stripe.py  setup_stripe_connect.py
core/tests/: conftest.py  test_admin.py  test_analytics.py  test_budgets.py  test_connectors.py  test_context.py  test_device_auth.py  test_devices.py  test_federation.py  test_goals.py  test_graph.py  test_health.py  test_identity.py  test_learning.py  test_load.py  test_load_capacity.py  test_memory.py  test_reputation.py  test_security.py  test_security_pentest.py  test_swarm.py  test_teams.py  test_tenants.py  test_two_factor.py  test_vitals.py  test_webhooks.py
mcp-server/: README.md  pyproject.toml
mcp-server/nexus_mcp/: __init__.py  server.py
sdk-python/: pyproject.toml
sdk-python/nexus_sdk/: __init__.py  analytics.py  budgets.py  client.py  context.py  discovery.py  goals.py  graph.py  learning.py  memory.py  messaging.py  reputation.py  swarm.py  tenants.py  vitals.py  webhooks.py
sdks/python/: pyproject.toml
sdks/rust/: Cargo.toml  README.md
(+180 files in other folders)
