[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-cli"
version = "0.1.0"
description = "Command-line interface for Nexus AI Agent Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nexus Team" }
]
keywords = ["ai", "agents", "cli", "nexus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nexus = "nexus_cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/nexus"
Documentation = "https://docs.nexus.ai"

[tool.hatch.build.targets.wheel]
packages = ["nexus_cli"]
