[project]
name = "nexus-core"
version = "0.1.0"
description = "The connective layer for AI agents - Identity, Memory, Discovery"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team"}
]
keywords = ["ai", "agents", "memory", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "sentence-transformers>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "stripe>=7.0.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.19.0",
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "alembic>=1.13.0",
    "croniter>=2.0.0",
    "email-validator>=2.0.0",
    "passlib>=1.7.0",
    # Robotics & IoT protocols
    "paho-mqtt>=2.0.0",
    "pymavlink>=2.4.0",
]

[project.scripts]
nexus = "nexus.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
vault = [
    "hvac>=2.0.0",
]
connectors = [
    # MongoDB
    "motor>=3.3.0",
    # Elasticsearch
    "elasticsearch[async]>=8.0.0",
    # S3
    "aioboto3>=12.0.0",
]
all = [
    "hvac>=2.0.0",
    "motor>=3.3.0",
    "elasticsearch[async]>=8.0.0",
    "aioboto3>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
