[project]
name = "nexus-mcp"
version = "0.1.0"
description = "Nexus MCP Server - Connect Claude Desktop/Cursor to Nexus"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.26.0",
]

[project.scripts]
nexus-mcp = "nexus_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
