[package]
name = "nexus-sdk"
version = "0.1.0"
edition = "2021"
description = "Nexus Rust SDK - Connect to the AI agent platform"
license = "MIT"
repository = "https://github.com/jcmac29/nexus"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
